# languages

./: README.md
android_perf/: test.sh  trace_file.perfetto-trace
assembly/: Makefile  test.asm  test.dump
autotools/ifnames/: main.c  runme.sh  test.c
autotools/m4/: c_function.m4  jigsaw.m4  recursive.m4
awk/: multi_array.awk
c/align/: Makefile  main_align.c  main_align2.c  main_pragma.c
c/arrayPointer/: Makefile  main.c  main_array_sizeof.c
c/atoi/: main.c
c/cCallCPP/: cppCaller.cpp  cppCaller.h  cppCallerWrapper.cpp  cppCallerWrapper.h  main.c  makefile
c/charArray/: main.c
c/charcoding/: main.c
c/const/: main.c
c/crossCall/: Makefile  main.c  test.cc
c/define/: README  main.c  test.c  test.h
c/emoji/: Makefile  main.c
c/executableSO/: Makefile  main  test.c  test2.c
c/funcInfunc/: Makefile  main.c
c/gdbserver/: Makefile  main.c
c/grof/: Makefile  main.c
c/indirectLibs/: main.c  main_static.c  makefile
c/instrumentFunctionCall/: instrument.c  instrument.h  makefile  test.c
c/instrumentFunctionCall4perfetto/: Makefile  Makefile.noInstrument  deploy.sh  deploy_run.sh  host_instrument.c  host_test_instrument.c  instrument.c  instrument.cc  instrument.h  shared_funcs.c  shared_funcs.h  test.c  (+3 more)
linux-perf/: Makefile  env.sh  main.c  run.sh  test.c  test.h
make/: Makefile  main.c  readme.txt
meson/customAndStdLibs/: main.c  meson.build
meson/customAndStdLibs/lib/: lib.h  makefile
ndk/: Android.mk  Makefile  test.c
pkg-config/: Makefile  dimon.pc  lib.c  lib.h  main.c
vim/: astyle  generatetags.sh  style_code.sh
(+225 files in other folders)
